tests/parser/bad/stmts_t-cid-with.scilla
scilla_version 0

library TestLib

contract Test
()

field money : Uint64 = Uint64 0

transition arbitrary ()
 money transition
end
